@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-27T00:42:42Z",
-  "count_outdated" : 638,
-  "uniques_outdated" : 128,
+  "timestamp" : "2022-09-30T16:13:54Z",
+  "count_outdated" : 639,
+  "uniques_outdated" : 129,
   "count" : 643,
   "uniques" : 133,
   "views" : [
-    {
-      "timestamp": "2022-09-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-18T00:00:00Z",
       "count": 1,
