@@ -1,12 +1,7 @@
 {
-  "count": 5,
+  "count": 4,
   "uniques": 4,
   "views": [
-    {
-      "timestamp": "2022-09-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-18T00:00:00Z",
       "count": 1,
