@@ -1,3 +1,11 @@
+2022-09-30T16:13:54Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3160153123
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 128 638 / 133 643
+* notice: next accum: outdated-unq outdated-all / unq all: 129 639 / 133 643
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-16] / []
+
 2022-09-27T00:42:42Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3132118872
 * notice: last 14d: unq all: 4 5
